Project NotificationApi {
        database_type: 'NotificationApiDB'
        Node: '''
                # Notification ERD
                **ERD elaborado para o banco de dados Firestore da NotificationApi**
        '''
}

Table subscribers {
       id              String      [not null, pk]
       is_enabled      Boolean     [not null]
       token           String      [not null]
       expires_at      Timestamp   [not null]
}

Table subscriber_publisher_conn_maps {
       publisher_conn_id     String      [not null, ref: > publishers_conn.id]
       subscriber_id         String      [not null, ref: > subscribers.id]

       Indexes {
          (subscriber_id, publisher_conn_id) [name: 'UQ_publisher_conn_id_subscriber_id']
          subscriber_id [unique]
          publisher_conn_id [unique]
       }
}

Table publishers_conn {
       id               String          [not null, pk]
       user_id          String          [not null]
       publisher_id     String          [not null]
       segment          String          [not null]

       Indexes {
          (user_id, publisher_id) [name: 'UQ_publishers_conn_publisher_id_user_id']
          publisher_id [unique]
          user_id [unique]
       }
}

Table notifications {
       id              String           [not null, pk]
       publisher_id    Reference        [not null]
       title           String           [not null]
       message         String           [not null]
       created_at      Timestamp        [not null]
}

Table notifications_status {
        notification_id    Reference    [not null, ref: > notifications.id]
        subscriber_id      Reference    [not null, ref: > subscribers.id]
        accessed           boolean      [not null, default: false]
}
